--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+pull-secret.txt
 
 # Include override files you do wish to add to version control using negated pattern
 #
